fix: restore gold border on author avatar when wrapped in link

--- a/src/styles/BlogPost.module.scss
+++ b/src/styles/BlogPost.module.scss
@@ -74,7 +74,8 @@
       > address {
         display: flex;
         align-items: center;
-        > img {
+        > img,
+        > a > img {
           vertical-align: middle;
           border-radius: 100%;
           border: .2rem solid gold;
